@@ -155,7 +155,7 @@ signals:
 		const QPointF &point, qreal angle, qreal zoom, bool mirror, bool flip,
 		bool constrain, bool center);
 	void penUp(bool constrain, bool center);
-	void quickAdjust(int type, qreal value);
+	void quickAdjust(int type, qreal value, bool wheel);
 	void coordinatesChanged(const QPointF &coordinates);
 
 	void viewRectChange(const QPolygonF &viewport);
