@@ -41,9 +41,9 @@ public:
 	void setForeground(const QColor &color) override;
 	void setBackground(const QColor &color) override;
 	void setCompatibilityMode(bool compatibilityMode) override;
-	void quickAdjust1(qreal adjustment) override;
-	void quickAdjust2(qreal adjustment) override;
-	void quickAdjust3(qreal adjustment) override;
+	void quickAdjust1(qreal adjustment, bool wheel) override;
+	void quickAdjust2(qreal adjustment, bool wheel) override;
+	void quickAdjust3(qreal adjustment, bool wheel) override;
 	void stepAdjust1(bool increase) override;
 	void stepAdjust2(bool increase) override;
 	void stepAdjust3(bool increase) override;
@@ -142,8 +142,6 @@ private:
 	void updateFromUi();
 	void updateFromUiWith(bool updateShared);
 	void updateStabilizationSettingVisibility();
-	void
-	quickAdjustOn(KisSliderSpinBox *box, qreal adjustment, qreal &quickAdjustN);
 	void handlePresetChanged(
 		int presetId, const QString &name, const QString &description,
 		const QPixmap &thumbnail, const brushes::ActiveBrush &brush);
@@ -169,7 +167,6 @@ private:
 	void emitBlendModeChanged();
 	void emitBrushModeChanged();
 
-	void adjustSlider(KisSliderSpinBox *slider, int value);
 	void updateRadiusLogarithmicLimit();
 	int clampBrushSize(int size) const;
 	static float myPaintRadiusToRadiusLogarithmic(float myPaintRadius);
