@@ -41,7 +41,7 @@ public:
 	void toggleAlphaPreserve() override;
 	void toggleBlendMode(int blendMode) override;
 
-	void quickAdjust2(qreal adjustment) override;
+	void quickAdjust2(qreal adjustment, bool wheel) override;
 	void stepAdjust2(bool increase) override;
 
 	void pushSettings() override;
