@@ -927,7 +927,7 @@ void CanvasController::wheelAdjust(
 {
 	event->accept();
 	if(allowed) {
-		emit quickAdjust(param, qreal(delta) / 120.0);
+		emit quickAdjust(param, qreal(delta) / 120.0, true);
 	}
 }
 
@@ -1946,7 +1946,7 @@ void CanvasController::dragAdjust(int type, int delta, qreal acceleration)
 	if(acceleration != -1) {
 		d = std::copysign(std::pow(std::abs(d), acceleration), d);
 	}
-	emit quickAdjust(type, d * 0.1);
+	emit quickAdjust(type, d * 0.1, false);
 }
 
 void CanvasController::pickColor(
